2010-02-23  Gary Benson  <gbenson@redhat.com>

	* ports/hotspot/make/linux/makefiles/shark.make: Update copyright.
	* ports/hotspot/src/cpu/zero/vm/shark_globals_zero.hpp: Likewise.
	* ports/hotspot/src/share/vm/shark/sharkCompiler.cpp: Likewise.
	* ports/hotspot/src/share/vm/shark/sharkContext.hpp: Likewise.

2010-02-23  Gary Benson  <gbenson@redhat.com>

	* ports/hotspot/make/linux/makefiles/shark.make: Comment fix.

2010-02-21 Andrew John Hughes  <ahughes@redhat.com>

	* Makefile.am:
	(icedtea-debug.stamp): Add missing -debug on
	end of $(BUILD_OUTPUT_DIR).

2010-02-21  Xerxes Rånby  <xerxes@zafena.se>

	* ports/hotspot/src/share/vm/shark/sharkCompiler.cpp
	(MCPU): Explicitly defined for use by LLVM command line parser.
	(MAttrs): Likewise.
	(SharkCompiler::SharkCompiler): Create the JIT using LLVM EngineBuilder
	in order to explicitly set MCPU and MAttrs when using LLVM 2.7.
	* ports/hotspot/src/share/vm/shark/llvmHeaders.hpp:
	Include llvm/ExecutionEngine/JIT.h for LLVM 2.7 to make sure the
	JIT are linked in.

2010-02-22  Deepak Bhole <dbhole@redhat.com>

	* plugin/icedteanp/java/sun/applet/PluginAppletViewer.java: Centralized
	and increased timeouts to give slow-loading applets enough time to load.

2010-02-19 Andrew John Hughes  <ahughes@redhat.com>

	* acinclude.m4:
	(FIND_RHINO_JAR): Clear RHINO_JAR variable
	if it still contains "no" at the end of the
	macro.

2010-05-26 Andrew John Hughes  <ahughes@redhat.com>

	* Makefile.am:
	Update HotSpot changeset and SHA256 sum to
	obtain DIST_ID and DERIVATIVE_ID support.
	(bootstrap-directory-stage1.stamp): Always create
	the boot tools.jar as a symlink to rt.jar to
	appease the HotSpot build.  Join dependent parts
	using &&.
	(rewriter.stamp): Use IT_JAVACFLAGS and explicitly
	create destination directory as javac doesn't while
	ecj does.
	(rewrite-rhino.stamp): Join dependent parts with &&.
	(clean-tools-jar): Remove boot tools.jar symlink.

2010-02-17 Andrew John Hughes  <ahughes@redhat.com>

	PR icedtea/179